[gd_scene load_steps=24 format=2]

[ext_resource path="res://textures/playerSheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://textures/Fonts/ConcertOne-font-small.tres" type="DynamicFont" id=3]
[ext_resource path="res://scripts/Actors/TimerLabel.gd" type="Script" id=4]
[ext_resource path="res://scripts/Actors/SetCamLimitOnStart.gd" type="Script" id=5]
[ext_resource path="res://textures/UI/Mobile/jump.png" type="Texture" id=6]
[ext_resource path="res://textures/UI/Mobile/right.png" type="Texture" id=7]
[ext_resource path="res://textures/UI/Mobile/left.png" type="Texture" id=8]
[ext_resource path="res://textures/UI/Mobile/exit.png" type="Texture" id=9]
[ext_resource path="res://textures/UI/Mobile/reset.png" type="Texture" id=10]
[ext_resource path="res://textures/UI/Mobile/resetHover.png" type="Texture" id=11]
[ext_resource path="res://textures/UI/Mobile/rightHover.png" type="Texture" id=12]
[ext_resource path="res://textures/UI/Mobile/leftHover.png" type="Texture" id=13]
[ext_resource path="res://textures/UI/Mobile/exitHover.png" type="Texture" id=14]
[ext_resource path="res://textures/UI/Mobile/jumpHover.png" type="Texture" id=15]
[ext_resource path="res://textures/Fonts/ConcertOne-font.tres" type="DynamicFont" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 31 )

[sub_resource type="BitMap" id=2]
data = {
"data": PoolByteArray(  ),
"size": Vector2( 0, 0 )
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 128, 312 )

[sub_resource type="BitMap" id=4]
data = {
"data": PoolByteArray(  ),
"size": Vector2( 0, 0 )
}

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, -312, 216, -312, 216, 200, 0, 200 )

[sub_resource type="BitMap" id=6]
data = {
"data": PoolByteArray(  ),
"size": Vector2( 0, 0 )
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 256, 256 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 2 )

[node name="PlayerSprite" type="Sprite" parent="."]
position = Vector2( 0, -32 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
hframes = 5
region_rect = Rect2( 0, 0, 64, 64 )

[node name="CollisionShape2Dspike" type="CollisionShape2D" parent="."]
light_mask = 16
position = Vector2( -0.25, -31 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -31 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = -9999
limit_top = -9999
limit_right = 9999
limit_bottom = 9999
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 1.0
drag_margin_left = 0.14
drag_margin_top = 0.14
drag_margin_right = 0.14
drag_margin_bottom = 0.14
script = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FpsLabel" type="Label" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -171.0
margin_right = -3.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 3 )
text = "FPS_COUNTER"
align = 2

[node name="CoinsleftLabel" type="Label" parent="CanvasLayer"]
margin_left = 3.0
margin_top = 21.0
margin_right = 173.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 3 )
text = "COINS"

[node name="TimerLabel" type="Label" parent="CanvasLayer"]
margin_left = 3.0
margin_top = 40.0
margin_right = 134.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 3 )
text = "TIMER"
script = ExtResource( 4 )

[node name="CurrLevelLabel" type="Label" parent="CanvasLayer"]
margin_left = 3.0
margin_top = 1.0
margin_right = 173.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 3 )
text = "CURR_LEVEL"

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[node name="Mobile" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="MoveX" type="Control" parent="CanvasLayer/Mobile"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -144.0
margin_right = 288.0
margin_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Left" type="TouchScreenButton" parent="CanvasLayer/Mobile/MoveX"]
normal = ExtResource( 8 )
pressed = ExtResource( 13 )
bitmask = SubResource( 2 )
shape = SubResource( 3 )
shape_centered = false
passby_press = true
action = "move_left"
visibility_mode = 1

[node name="Right" type="TouchScreenButton" parent="CanvasLayer/Mobile/MoveX"]
position = Vector2( 136, 0 )
normal = ExtResource( 7 )
pressed = ExtResource( 12 )
bitmask = SubResource( 4 )
shape = SubResource( 5 )
shape_centered = false
passby_press = true
action = "move_right"
visibility_mode = 1

[node name="Menu" type="Control" parent="CanvasLayer/Mobile"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -160.0
margin_top = 24.0
margin_right = -16.0
margin_bottom = 88.0

[node name="Exit" type="TouchScreenButton" parent="CanvasLayer/Mobile/Menu"]
position = Vector2( 80, 0 )
normal = ExtResource( 9 )
pressed = ExtResource( 14 )
action = "ui_cancel"
visibility_mode = 1

[node name="Reset" type="TouchScreenButton" parent="CanvasLayer/Mobile/Menu"]
normal = ExtResource( 10 )
pressed = ExtResource( 11 )
action = "reset"
visibility_mode = 1

[node name="Jump" type="Control" parent="CanvasLayer/Mobile"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -144.0
margin_top = -144.0
margin_right = -16.0
margin_bottom = -16.0

[node name="Jump" type="TouchScreenButton" parent="CanvasLayer/Mobile/Jump"]
normal = ExtResource( 6 )
pressed = ExtResource( 15 )
bitmask = SubResource( 6 )
shape = SubResource( 7 )
shape_centered = false
action = "jump"
visibility_mode = 1

[node name="LoadingLabel" type="Label" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -197.0
margin_top = -75.0
margin_right = -30.0
margin_bottom = -35.0
custom_fonts/font = ExtResource( 16 )
text = "Loading..."

[node name="Rot_Tween" type="Tween" parent="."]
